--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -1,7 +1,7 @@
 #summary Version requirements for MoonPy
-#labels Phase-Implementation
+#labels Phase-Implementation,Deprecated
 
-These are the general requirements for each major release of MoonPy. Currently we are working towards the 0.9.00 release. This information may not be completely up to date, more detailed information about bugs and feature implementation can be found on the [http://code.google.com/p/tether/issues/list issue tracker].
+These are the general requirements for each major release of MoonPy. Currently all work on MoonPy is on hold as a planned rewrite from scratch called Scorched Moon is in progress.
 
 = Requirements for version 0.5.00=
 
