--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -51,6 +51,12 @@ The biggest change we made is the number of players. The original Moonbase Comma
 ====Changing Moonbase Commander is heresy! Why did you change things?====
 Most of the changes we have listed are things that we felt were flaws in Moonbase Commander. The 4 player limit for example was always a major problem for most of us. Same goes true for most of the other changes listed. 
 
+====Why aren't you making the game 3D?====
+Mostly because the lead developers don't feel it's worth the extra effort just to have eye candy.
+
+====I think MoonPy should do X, why don't you do it?====
+We take suggestions but remember we're all unpaid volunteers doing this out love for Moonbase Commander. If you *really* want something implemented everything we have is open source so feel free to implement it yourself. 
+
 ====I found a bug, what do I do?====
 Great, identifying them is the hardest part. First of all, check the [http://code.google.com/p/tether/issues/list issue tracker] to find out if it's already known. If it isn't please report it there and give as much detail as you can, don't forget to upload your moonpy.log file for that game when filling out the issue. You can also see if one of the developers are available on IRC as well.
 
