--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -25,10 +25,10 @@ MoonPy is our first open source remake of Moonbase Commander developed by us her
 Back in the early days of this project we couldn't decide on a name for the game itself. At the time we decided we wouldn't worry about it and would come up with one later. We titled the python script to launch our game "moon", short for moonbase commander. Because it's written in python it's listed as moon.py in the filesystem. We started calling it "moon dot pie" just to call it something, and eventually it got abbreviated to it's current name MoonPy (pronounced like "moon pie"). 
 
 ====How far along is MoonPy?=====
-MoonPy is currently still beta but completely playable. All the units except for balloons are implemented, and since there is no FoW yet, balloons are currently unnecessary. Currently all development on MoonPy has been halted in favor of Scorched Moon.
+MoonPy is playable but extremely glitchy. All the units except for balloons are implemented, and since there is no FoW, balloons are currently unnecessary. Currently all development on MoonPy has been halted in favor of Scorched Moon.
 
 ====What is Scorched Moon?====
-Scorched Moon is essentially our sequel to MoonPy. MoonPy has some serious design flaws in it, mostly relating to the GUI library used, however since these problems are related to the original design and would require so much work to change it was decided it would simply be easier to redesign and rewrite MoonPy from the ground up. With such a major change planned we decided we'd actually give it a proper name since MoonPy isn't what any of us wanted for a name but is what we got stuck with.
+Scorched Moon is essentially our sequel to MoonPy. MoonPy has some serious design flaws in it that results in delays and glitches, most of this relates to the GUI library used, however since these problems are related to the original design and would require so much work to change it was decided it would simply be easier to redesign and rewrite MoonPy from the ground up. With such a major change planned we decided we'd actually give it a proper name since MoonPy isn't what any of us wanted for a name but is what we got stuck with.
 
 ====I can't find a download for Scorched Moon, where is it?====
 Scorched Moon is still in development and currently unplayable. There is some code on SVN but most of it is currently offline. Once it's at an even partially playable status we'll offer downloads on the download page for people to help us test.
@@ -52,7 +52,7 @@ We are intentionally making all software developed by project tether to be fully
 No.
 
 ====Really? Why not?====
-Mostly because Moonbase Commander is essentially dead, practically no one plays it anymore and it's almost impossible to find a *legitimate* copy of the game. What we're trying to do is hard enough already and we don't want to go through the hassle of reverse engineering everything for no real benefit. We also made some changes that make MoonPy and Scorched Moon incompatible with the original even if we did manage to reverse engineer everything.
+Mostly because Moonbase Commander is essentially dead, practically no one plays it anymore and the networking is pretty unstable to begin with. What we're trying to do is hard enough already and we don't want to go through the hassle of reverse engineering everything for no real benefit. We also made some changes that make MoonPy and Scorched Moon incompatible with the original even if we did manage to reverse engineer everything.
 
 ====What changes were made?====
 The biggest change we made is the number of players. The original Moonbase Commander can not have more then 4 players in a single game which we found inconvenient. MoonPy has no limit to the number of players that can join a single game. We have also added in hotseat capabilties, the ability to implement mods, the ability for users to script their own bots, and systems to make finding other players online easier. We are planning to make similar gameplay changes to Scorched Moon.
@@ -61,7 +61,7 @@ The biggest change we made is the number of players. The original Moonbase Comma
 Most of the changes we have listed are things that we felt were flaws in Moonbase Commander. The 4 player limit for example was always a major problem for most of us. Same goes true for most of the other changes listed. 
 
 ====Why aren't you making the game 3D?====
-Mostly because the lead developers don't feel it's worth the extra effort just to have eye candy.
+Mostly because the lead developers are struggling enough with what they're already doing. Eye candy is low priority. 
 
 ====I think MoonPy/Scorched Moon should do X, why don't you do it?====
 We take suggestions but remember we're all unpaid volunteers doing this out love for Moonbase Commander. If you *really* want something implemented everything we have is open source so feel free to implement it yourself. 
