Edited wiki page ScorchedMoon_design through web user interface.

--- a/wiki/ScorchedMoon_design.wiki
+++ b/wiki/ScorchedMoon_design.wiki
@@ -12,7 +12,7 @@ Scorched Moon is going to be built in two parts. First will be the server. Secon
 
 == Server Design ==
 
-Server will handle all game logic in Scorched Moon, this includes map data. The client will submit turn variables to the server. Server will process this data then send complete map data back to the client. This includes FoW and SoW. By having the server handle of FoW and SoW it will limit player cheating as the client will only receive the information that the player is supposed to know and create confidence that custom clients are not cheating. This will hypothetically allow someone to simply connect up and play through telnet or any client someone might choose to make that uses the commands. However because most people are going to want to play with a client similar to OMBC that is active the map data sent by the server does need to include 'active' data. Specifically the map needs to indicate that a unit recently 'traveled' across a specific location. This way in a game using FoW if a shot goes from within the FoW, goes through a players field of view and lands within the FoW on the other side the player who's field of view it went through will be aware of the shot and what direction it was traveling. 
+Server will handle all game logic in Scorched Moon, this includes map data. The client will submit turn variables to the server. Server will process this data then send complete map data back to the client. This includes FoW and SoW. By having the server handle of FoW and SoW it will limit player cheating as the client will only receive the information that the player is supposed to know and create confidence that custom clients are not cheating. Since all commands ands information will be in an open text format it means that theoretically someone will be able to connect straight through telnet if necessary. This will assist in server development before a client is available. It will also allow the potential for multiple forms of clients. However because most people are going to want to play with a client similar to OMBC that is active the map data sent by the server does need to include 'active' data. Specifically the map needs to indicate that a unit recently 'traveled' across a specific location. This way in a game using FoW if a shot goes from within the FoW, goes through a players field of view and lands within the FoW on the other side the player who's field of view it went through will be aware of the shot and what direction it was traveling. 
 
 == Client Design ==
 
