--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -10,13 +10,10 @@ Project tether is an open source project focused on recreating the classic strat
 Moonbase Commander has quite often been called "the best game no one has ever heard of". Most people describe it as a unique combination of Starcraft and Scorched Earth but that doesn't say much. The best way to find out what Moonbase Commander is like is to play the game.
 
 ====Well then where can I go to play the game?====
-You could do a web search to find a copy of the trial version online, or you could simply download and play [http://code.google.com/p/tether/downloads/list MoonPy].
+You could do a web search to find a copy of the trial version online.
 
 ====Moonbase Commander absolutely rocks! Why recreate something thats so perfect?====
-While Moonbase Commander is a great game, there are some flaws and glitches that have never been fixed. Because the game has not received any support from the parent company for over 10 years we assume that they will never be resolved. Rather then live with it we started this project to resolve these flaws ourselves.
-
-====Project Tether hasn't updated in over a year! Is this another dead project?====
-We're not completely dead but because the lead developer and project administrator has been busy with real life stuff, development has slowed to a crawl. It actually is still being worked on but there just hasn't been anything worth posting in all this time. This is why we consider the project in hibernate status for the time being. If someone has the time and is willing to take over coding duties we'd appreciate it but otherwise we ask that you be patient. Once Scorched Moon is even partially playable we'll post the news. We do monitor the chats and mailing lists if you want to chat and of course you can play download and play MoonPy.
+While Moonbase Commander is a great game, there are some flaws and glitches that have never been fixed. Because the game has not received any support from any of the different companies that own it for over 10 years we assume that they will never be resolved. Rather then live with it we started this project to resolve these flaws ourselves.
 
 ====What is MoonPy?====
 MoonPy is our first open source remake of Moonbase Commander developed by us here at project tether. 
@@ -27,26 +24,23 @@ Back in the early days of this project we couldn't decide on a name for the game
 ====How far along is MoonPy?=====
 MoonPy is playable but extremely glitchy. All the units except for balloons are implemented, and since there is no FoW, balloons are currently unnecessary. Currently all development on MoonPy has been halted in favor of Scorched Moon.
 
+====Where did the MoonPy downloads go?====
+Since all work has stopped on MoonPy we have deprecated it so the OS specific downloads are no longer available. The source tar.gz package is available on the download page though you'll have to search for deprecated files. It is also available as a branch on SVN. You can also sometimes find it on some 3rd party sites like playdeb. 
+
+====I have no clue what you just said, is there an easier way to download MoonPy?====
+We don't support MoonPy anymore so basically no.
+
 ====What is Scorched Moon?====
 Scorched Moon is essentially our sequel to MoonPy. MoonPy has some serious design flaws in it that results in delays and glitches, most of this relates to the GUI library used, however since these problems are related to the original design and would require so much work to change it was decided it would simply be easier to redesign and rewrite MoonPy from the ground up. With such a major change planned we decided we'd actually give it a proper name since MoonPy isn't what any of us wanted for a name but is what we got stuck with.
 
 ====I can't find a download for Scorched Moon, where is it?====
-Scorched Moon is still in development and currently unplayable. There is some code on SVN but most of it is currently offline. Once it's at an even partially playable status we'll offer downloads on the download page for people to help us test.
-
-====How do I play MoonPy single player?====
-MoonPy has been designed from the beginning for multiplayer against other people. We have no plans on ever creating a campaign for it (though if someone wants to they're more then welcome). A very basic AI called "Dumb-bot" has been implemented as of version 0.8.16 which you can fight against in multiplayer. It isn't much of a challenge but it does provide a target to practice on if you don't have anyone else to play against.
-
-====How do I find someone to play against online?====
-The best way is to use IRC. The devs often hang out at irc.freenode.net channel #moonpy so you can usually find someone there. There is an IRC client built right into the most recent versions of MoonPy so simply selecting 'find online game' from the main menu will connect you directly there.
-
-====I've been waiting forever for someone else to show up on IRC, how long should I wait?====
-We're still a small community so it may take some time but one of the devs will show up eventually. Also, wait for more then 5 seconds and at least ask if anyone is there. Quite often we have seen someone show up, say nothing, and then quit before we had a chance to notice someone was even there. If you really want to find people to play with, tell your friends about MoonPy. The more people that know about it, the more people that will check in and the easier it will be to find someone to play against.
+Scorched Moon is still in early development and not playable yet. The code for it is available on SVN if you want to help with testing or just take a look. Be aware we are building a standalone server first before we even look at a graphical client so even when it is "playable" it will require telnet to use and so casual testers should wait for the client.  
 
 ====Why are you using python, why not a real programming language like C++?====
 There are many reasons we're using python but the top 3 reasons are: it's simple to code, it's easily portable to different OS's, and it does what we need.
 
 ====What OS are you developing for?====
-We are intentionally making all software developed by project tether to be fully compatible with Linux, osX, and Windows. Theoretically they should work on any OS that has python and pygame installed however we are not planning on doing compatibility testing for any other systems. 
+We are intentionally making all software developed by project tether to be fully compatible with Linux, osX, and Windows. Theoretically they should work on any OS that has python installed however we are not planning on doing compatibility testing for any other systems. 
 
 ====Will any project tether game be compatible with Moonbase Commander?====
 No.
@@ -55,22 +49,19 @@ No.
 Mostly because Moonbase Commander is essentially dead, practically no one plays it anymore and the networking is pretty unstable to begin with. What we're trying to do is hard enough already and we don't want to go through the hassle of reverse engineering everything for no real benefit. We also made some changes that make MoonPy and Scorched Moon incompatible with the original even if we did manage to reverse engineer everything.
 
 ====What changes were made?====
-The biggest change we made is the number of players. The original Moonbase Commander can not have more then 4 players in a single game which we found inconvenient. MoonPy has no limit to the number of players that can join a single game. We have also added in hotseat capabilties, the ability to implement mods, the ability for users to script their own bots, and systems to make finding other players online easier. We are planning to make similar gameplay changes to Scorched Moon.
+The biggest change we made is the number of players. The original Moonbase Commander can not have more then 4 players in a single game which we found inconvenient. Scorched Moon is being built as a standalone server allowing someone to host multiple games with however many users their system can support. Also we're leaving the communication format open to allow for custom clients.
 
 ====Changing Moonbase Commander is heresy! Why did you change things?====
 Most of the changes we have listed are things that we felt were flaws in Moonbase Commander. The 4 player limit for example was always a major problem for most of us. Same goes true for most of the other changes listed. 
 
-====Why aren't you making the game 3D?====
-Mostly because the lead developers are struggling enough with what they're already doing. Eye candy is low priority. 
-
-====I think MoonPy/Scorched Moon should do X, why don't you do it?====
+====I think Scorched Moon should do X, why don't you do it?====
 We take suggestions but remember we're all unpaid volunteers doing this out love for Moonbase Commander. If you *really* want something implemented everything we have is open source so feel free to implement it yourself. 
 
 ====I found a bug, what do I do?====
-Great, identifying them is the hardest part. Remember though that we've stopped development on MoonPy so we will ignore bug reports for it. If you have found a problem with Scorched Moon please check the [http://code.google.com/p/tether/issues/list issue tracker] to find out if it's already known. If it isn't please report it there. You can also see if one of the developers are available on IRC as well.
+Great, identifying them is (usually) the hardest part. Remember though that we've stopped development on MoonPy so we will ignore bug reports for it. If you have found a problem with Scorched Moon it's still in very early development so chances are we're alreay aware of it even if it's not listed on the [http://code.google.com/p/tether/issues/list issue tracker]. 
 
 ====How can I help out with the project?=====
-We can always use some help to keep this going. Currently the biggest help we need is people to help us identify bugs, so just downloading it, playing it, and reporting back to us would be *very* useful. In addition to help with the code we also could use graphics, sounds, music, documentation, etc. You can always check out the [http://code.google.com/p/tether/issues/list issue tracker], or post onto our [http://groups.google.com/group/project-tether mailing list]. Also just spreading the word about project tether is a big benefit to us as well.
+We can always use some help to keep this going. Currently the biggest help we need is people to help us code it. In addition to help with the code we also could use graphics, sounds, music, documentation, etc. You can always check out the [http://code.google.com/p/tether/issues/list issue tracker], or post onto our [http://groups.google.com/group/project-tether mailing list]. Also just spreading the word about project tether is a big benefit to us as well. The more people intereseted, the more likely someone else will be able to help.
 
 ====I've been looking through the MoonPy source code archives and keep seeing mention of openRTS, is project tether a part of openRTS?====
-openRTS is a completely seperate project from project tether. We have however integrated code from various other open source projects to help speed up development of project tether. The MoonPy engine is a heavily modified version of the openRTS engine and as such elements of openRTS occasionally show up, especially in older versions of MoonPy. Currently very little of the original openRTS engine remains unchanged within MoonPy, we do however have the original unedited openRTS source files deprecated on our [http://code.google.com/p/tether/downloads/list downloads page] for reference and historical purposes. Scorched Moon shares no code with openRTS since it is being developed from the ground up though large parts of it are similar to MoonPy. 
+openRTS is a completely seperate project from project tether. We have however integrated code from various other open source projects to help speed up development of project tether. The MoonPy engine is a heavily modified version of the openRTS engine and as such elements of openRTS occasionally show up, especially in older versions of MoonPy. Currently very little of the original openRTS engine remains unchanged within MoonPy, we do however have the original unedited openRTS source files deprecated on our [http://code.google.com/p/tether/downloads/list downloads page] for reference and historical purposes. Scorched Moon shares no code at all with openRTS. 
