Edited wiki page Abbreviations through web user interface.

--- a/wiki/Abbreviations.wiki
+++ b/wiki/Abbreviations.wiki
@@ -11,3 +11,4 @@ We use many abbreviations here at project tether, this is a list of the most com
   * ATS = Artillery, Top-down, Strategy - A game with the same playstyle as OMBC
   * SoW = Shroud of War - sections of the map that have not been explored yet and not even the terrain is known
   * FoW = Fog of War - sections of the map where the terrain is known but outside the visibility range of units so enemy units can not be seen.
+  * FOSS = Free Open Source Software
