--- a/trunk/server_scorched_moon/AUTHORS.txt
+++ b/trunk/server_scorched_moon/AUTHORS.txt
@@ -1,4 +1,4 @@
-Scorched Moon was developed by project tether:
+Scorched Moon was developed by Project Tether:
 http://code.google.com/p/tether
 
 Primary Contributors to project tether are:
